# QBVH-Rust-Ray-Tracer

./: .gitignore  Cargo.toml  README.md
raytracer/: raytracer.vtuneproj
raytracer/r000hs/: r000hs.vtune
raytracer/r000hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
raytracer/r000hs/data.0/: 10116-13564.0-12984.0.th  10116-13564.0-22832.0.th  10116-13564.0-22832.0.th.aux  10116-13564.0-24868.0.th  10116-13564.0-27904.0.th  10116-13564.0-27904.0.th.aux  10116-13564.0-3988.0.th  10116-13564.0-9860.0.th  10116-13564.0.trace  systemcollector-27960-DESKTOP-22B0NE3.sc
raytracer/r000hs/sqlite-db/: dicer.db
raytracer/r001hs/: r001hs.vtune
raytracer/r001hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
raytracer/r001hs/data.0/: 24740-26192.0-1068.0.th  24740-26192.0-24884.0.th  24740-26192.0-27336.0.th  24740-26192.0-27336.0.th.aux  24740-26192.0-28292.0.th  24740-26192.0-29560.0.th  24740-26192.0-29560.0.th.aux  24740-26192.0-8008.0.th  24740-26192.0-8008.0.th.aux  24740-26192.0.trace  systemcollector-26380-DESKTOP-22B0NE3.sc
raytracer/r002hs/: r002hs.vtune
raytracer/r003hs/: r003hs.vtune
raytracer/r004hs/: r004hs.vtune
raytracer/r005hs/: r005hs.vtune
renders/: image-063.ppm
src/: aabb.rs  background.rs  bvh.rs  camera.rs  constant_medium.rs  imaging.rs  integrator.rs  main.rs  material.rs  object.rs  pdf.rs  ray.rs  rectangle.rs  scenes.rs  simd.rs  simd_bvh.rs  sphere.rs  texture.rs  transformations.rs  triangle_mesh.rs  world.rs
src/utilities/: draw_sample.rs  math.rs  mod.rs  onb.rs  vector3.rs
(+248 files in other folders)
